changing from encrypting to simply replacing value to be masked

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "cryptography>=46.0.4",
     "psycopg2-binary>=2.9.11",
     "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.46",
 ]
